--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -35,14 +35,6 @@ jobs:
       - name: Build Electron app
         run: npm run build:electron
 
-      - name: Compress Windows win-unpacked to zip
-        if: matrix.os == 'windows-latest'
-        run: |
-          $sourcePath = "packages\bruno-electron\out\win-unpacked\*"
-          $destinationPath = "packages\bruno-electron\out\bruno-win-unpacked.zip"
-          if (Test-Path $destinationPath) { Remove-Item $destinationPath }
-          Compress-Archive -Path $sourcePath -DestinationPath $destinationPath
-
       - name: Upload macOS dmg
         if: matrix.os == 'macos-latest'
         uses: actions/upload-artifact@v6
@@ -61,10 +53,10 @@ jobs:
             packages/bruno-electron/out/**
           if-no-files-found: error
 
-      - name: Upload Windows win-unpacked zip
+      - name: Upload Windows win
         if: matrix.os == 'windows-latest'
         uses: actions/upload-artifact@v6
         with:
-          name: bruno-windows-win-unpacked-${{ github.ref_name }}
-          path: packages/bruno-electron/out/bruno-win-unpacked.zip
+          name: bruno-windows-win-${{ github.ref_name }}
+          path: packages/bruno-electron/out/win-unpacked/**
           if-no-files-found: error
