--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -2,6 +2,11 @@ name: Build Desktop Packages
 
 on:
   workflow_dispatch:
+    inputs:
+      channel:
+        description: '版本号，例如 1.0.0'
+        required: false
+        default: 1.0.0
 
 jobs:
   build-desktop:
@@ -39,7 +44,7 @@ jobs:
         if: matrix.os == 'macos-latest'
         uses: actions/upload-artifact@v6
         with:
-          name: bruno-macos-dmg-${{ github.ref_name }}
+          name: bruno-macos-${{ inputs.channel }}
           path: packages/bruno-electron/out/bruno_*_mac.dmg
           if-no-files-found: error
 
@@ -47,7 +52,7 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         uses: actions/upload-artifact@v6
         with:
-          name: bruno-ubuntu-${{ github.ref_name }}
+          name: bruno-ubuntu-${{ inputs.channel }}
           path: |
             packages/bruno-electron/dist/**
             packages/bruno-electron/out/**
@@ -57,6 +62,6 @@ jobs:
         if: matrix.os == 'windows-latest'
         uses: actions/upload-artifact@v6
         with:
-          name: bruno-windows-win-${{ github.ref_name }}
+          name: bruno-windows-${{ inputs.channel }}
           path: packages/bruno-electron/out/win-unpacked/**
           if-no-files-found: error
